# Keydows

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README  README.md  TODO  config.json
Grid/: Makefile
Grid/src/: main.cpp
Grid/src/core/: application.hpp  hotkeys.hpp
Keydows/: Makefile
Keydows-Old/: Makefile
Keydows-Old/src/core/: application.hpp  hotkeys.hpp
Keydows/src/: main.cpp
Keydows/src/core/: application.cpp  application.hpp  config_parser.hpp  hotkeys.h  hotkeys.hpp  windowsdefs.h
config/: config.txt
src/: defines.h  main.cpp  tests.cpp
src/core/: application.cpp  application.h  application.hpp  event_types.h  hotkeys.cpp  hotkeys.h  hotkeys.hpp  overlay.cpp  overlay.h  smooth_scroll.cpp  smooth_scroll.h  smoothscroll.cpp  smoothscroll.h  tool_interface.h  windowsdefs.h
src/core/app/: application.cpp  application.h
src/core/events/: event_types.h
src/core/hotkeys/: hotkey_manager.cpp  hotkey_manager.h
src/core/input/: hl_input.cpp  hl_input.h  ll_input.cpp  ll_input.h
src/core/managers/: hook_manager.cpp  hook_manager.h  key_manager.h  ll_input.cpp  ll_input.h
src/event/: hotkeys.hpp  process.hpp
src/tools/: overlay.cpp  overlay.h  smooth_scroll.h
src/tools/overlay/: CMakeLists.txt  overlay.cpp  overlay.h
src/tools/smooth_navigate/: CMakeLists.txt  smooth_navigate.cpp  smooth_navigate.h
src/tools/smooth_scroll/: CMakeLists.txt  smooth_scroll.cpp  smooth_scroll.h
src/utils/: easing_functions.h  hotkeys.cpp  hotkeys.h  smoothing_functions.h  timer.h  vec.h
